Revert "book categories list"
This reverts commit 12be652a730080aa94827954d8653f04c35297ce.
