# api/handlers/models/book_category.go
@@ -1,0 +1,10 @@
+package models
+
+type BookCategory struct {
+	BookId     string `json:"bookId"`
+	CategoryId string `json:"categoryId"`
+}
+
+type BookCategoryDelete struct {
+	CategoryId string `json:"categoryId"`
+}
