# api/handlers/v1/category.go
@@ -2,6 +2,7 @@ package v1
 
 import (
 	"context"
+	"fmt"
 	"net/http"
 	"time"
 
@@ -103,6 +104,7 @@ func (h *handlerV1) GetCategory(c *gin.Context) {
 // @Failure 500 {object} models.StandardErrorModel
 func (h *handlerV1) GetCategories(c *gin.Context) {
 	queryParams := c.Request.URL.Query()
+	fmt.Println("Categories Ok")
 
 	params, errStr := utils.ParseQueryParams(queryParams)
 	if errStr != nil {
